# controller/book.go
@@ -12,6 +12,13 @@ import (
 const NOT_FOUND_ID string = "No Book Found with ID"
 const SUCCESSFUL_DELETION string = "Book Successfully deleted"
 
+// GetBooks example
+// @Tags Books
+// @Summary Get all books
+// @Description Get all books
+// @Produce  json
+// @Success 200 {array} model.Book "ok"
+// @Router /api/v1/book [get]
 func GetBooks(c *fiber.Ctx) error {
 	db := database.DBConn
 	var books []model.Book
@@ -19,6 +26,14 @@ func GetBooks(c *fiber.Ctx) error {
 	return c.JSON(books)
 }
 
+// GetBookWithId example
+// @Tags Books
+// @Summary Get book by ID
+// @Description Get book by Id
+// @Param        id   path      int  true  "Book ID"
+// @Produce  json
+// @Success 200 {object} model.Book "ok"
+// @Router /api/v1/book/{id} [get]
 func GetBook(c *fiber.Ctx) error {
 	id := c.Params("id")
 	db := database.DBConn
@@ -31,6 +46,13 @@ func GetBook(c *fiber.Ctx) error {
 	return c.JSON(book)
 }
 
+// @Tags Books
+// @Summary Create new book
+// @Description Create new book
+// @Produce  json
+// @Param        book  body      model.Book  true  "Add book"
+// @Success 200 {object} model.Book "ok"
+// @Router /api/v1/book [post]
 func NewBook(c *fiber.Ctx) error {
 	db := database.DBConn
 	book := new(model.Book)
@@ -41,6 +63,13 @@ func NewBook(c *fiber.Ctx) error {
 	return c.JSON(book)
 }
 
+// @Tags Books
+// @Summary Delete book by id
+// @Description Delete book by id
+// @Produce  json
+// @Param        id   path      int  true  "Book ID"
+// @Success 200 {string} string "Book Successfully deleted"
+// @Router /api/v1/book/{id} [delete]
 func DeleteBook(c *fiber.Ctx) error {
 	id := c.Params("id")
 	db := database.DBConn
